gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/imports/foo10727a.d
version https://git-lfs.github.com/spec/v1
oid sha256:a19d744e403baf10dc020387098ff3d03cecfaa5783b4e7a626e74c8ce218026
size 465
